fix commands alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ a {
 .debug {
     position: absolute;
     right: 0;
-    font-size: .70em;
+    font-size: 0.8em;
     max-width: 20%;
     width: 20%;
     height: 100%;
